--- a/style.css
+++ b/style.css
@@ -9,27 +9,65 @@
 h1{
     text-align: center;
 }
-ul{
-    padding: 0px;
-}
-li{
-    list-style: none;
-    background-color: rgb(75, 75, 75);
-    color: #ffffff;
-    margin: 10px 0px;
-    padding: 10px;
-    border: solid 1px rgb(87,87,87);
-    border-radius: 5px;
-}
-button{
+
+form>*{
     display: block;
+    margin-top: 10px !important;
     margin: auto;
+}
+
+input{
+    width: 250px;
+    border: solid 1px rgb(87,87,87);
+    border-radius: 21px;
+    padding: 10px;
+}
+
+textarea{
+    width: 250px;
+    height: 80px;
+    border: solid 1px rgb(87,87,87);
+    border-radius: 21px;
+    padding: 10px;
+}
+
+#submit{
     padding: 10px;
     background-color: rgb(0,163,76);
     color: #ffffff;
     border: solid 1px rgb(87,87,87);
-    border-radius: 5px;
+    border-radius: 15px;
 }
-button:hover{
+
+#submit:hover{
     cursor: pointer;
+}
+
+.success{
+    padding: 10px 5px;
+    border: solid 1px rgb(0,182,24);
+    border-radius: 5px;
+    background-color: #43e478;
+    text-align: center;
+}
+
+.error{
+    padding: 10px 5px;
+    border: solid 1px rgb(182,27,0);
+    border-radius: 5px;
+    background-color: #ff8585;
+    text-align: center;
+}
+
+
+.accepted{
+    border:2px solid rgb(0,182,24);
+}
+
+.rejected{
+    border:2px solid rgb(182,27,0);
+}
+
+input:focus,textarea:focus{
+    outline:none;
 }
